# ZugzwangRS

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: intro.md
docs/: alpha-blueprint.md  architecture-overview.md  changelog.md
docs/completed/: capture-crate-simplification.md
docs/completions/: capture-v1-implementation.md
docs/crates/: capture-module.md  engine-module.md  main-module.md  ocr-module.md
docs/executing/: capture-v1.md  cli_site_option.md  engine_api_fix.md  engine_module.md  ocr-board-to-fen.md  ocr-crate-design.md
docs/plans/: assessment-25nov25.md  future-improvements.md  implementation-notes.md
src/: calibrate.rs  capture.rs  config.rs  engine.rs  main.rs  ocr.rs  ocr_llm.rs  ocr_native.rs
