[package]
name = "zugzwang-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4"
crossterm = "0.29.0"
image = "0.25.9"
imageproc = "0.25.0"
pleco = "0.5.0"
rayon = "1.11.0"
rdev = "0.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shakmaty = "0.29.4"
xcap = "0.7.1"
