[package]
name = "zugzwang-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4"
image = "0.25.9"
imageproc = "0.25.0"
tanton = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
shakmaty = "0.29.4"
xcap = "0.7.1"

# LLM OCR dependencies
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
dialoguer = "0.11"

# Future Phase 2 dependencies (commented until needed)
# crossterm = "0.29.0"  # Terminal UI - Phase 4
# rayon = "1.11.0"      # Parallelization - Phase 3
# rdev = "0.5.3"        # Input capture for calibration - Phase 2
# serde_json = "1.0.145" # Config file I/O - Phase 2
